apps/apps/istio/istio-ingressgateway/data/default/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingressgateway
  namespace: istio-gateways
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: static-ip
    cert-manager.io/cluster-issuer: letsencrypt-prod
    networking.gke.io/v1beta1.FrontendConfig: http-redirect
spec:
  backend:
    serviceName: istio-ingressgateway
    servicePort: 80
  tls:
  - secretName: tls-cert-ingress
    hosts:
    - 'k8s.templarfelix.com'
